# HyperBEAM

./: .editorconfig  .gitignore  .gitpod.Dockerfile  .gitpod.yml  CU-structure.md  DEPLOY-notes.md  Dockerfile  Emakefile  GCP-notes.md  LICENSE.md  Makefile  README.md  build.sh  config.flat  erlang_ls.config  index.html  lib.rs  mkdocs.yml  package-lock.json  package.json  packer.pkr.hcl  pie.html  rebar.config  release.sh  setup.sh  start.sh
.githooks/: commit-msg
c_src/: ao_beamr.c  beamr.c  cu_beamr.c  cu_erwamr.c  cu_erwamr_imports.c  erwamr_nif.c  hb_beamr.c  hb_wasm.c  wasi_stubs.c  wasi_stubs.h
doc/: README.md  ar_bundles.html  ar_bundles.md  ar_deep_hash.html  ar_deep_hash.md  ar_http.html  ar_http_sup.html  ar_rate_limiter.html  ar_rate_limiter.md  ar_timestamp.html  ar_timestamp.md  ar_tx.html  ar_tx.md  ar_wallet.html  ar_wallet.md  dev_cache.md  dev_cacheviz.md  dev_codec_ans104.html  dev_codec_ans104.md  dev_codec_flat.html  dev_codec_flat.md  dev_codec_httpsig.html  dev_codec_httpsig.md  dev_codec_httpsig_conv.html  dev_codec_httpsig_conv.md  dev_codec_json.md  dev_codec_structured.html  dev_codec_structured.md  dev_codec_structured_conv.html  dev_compute_lite.html  dev_cron.html  dev_cron.md  dev_cu.html  dev_cu.md  dev_dedup.html  dev_dedup.md  dev_delegated_compute.md  dev_faff.html  dev_faff.md  dev_genesis_wasm.md  (+137 more)
docs/: README.md  ao-core-protocol.md  ao-http-api.md  build-all.sh  converge-http-api.md  converge-protocol.md  gathering-metrics-locally.md  hacking-on-hyperbeam.md  index.md  intro.md  llms-full.txt  llms.txt  permaweb-abstract-machine.md  setting-up-selecting-devices.md
metrics/: docker-compose.yml  prometheus.yml
native/dev_snp/: Cargo.toml
native/dev_snp/src/: lib.rs
native/dev_snp_nif/: Cargo.toml
native/dev_snp_nif/sev/: Cargo.toml
native/dev_snp_nif/sev/src/measurement/: gctx.rs
native/dev_snp_nif/src/: attestation.rs  calculation.rs  digest.rs  helpers.rs  lib.rs  logger.rs  logging.rs  snp_support.rs  verification.rs
native/digest_calc/: .gitignore  Cargo.toml  config.yml
native/digest_calc/src/: main.rs
native/sev_nif/: Cargo.toml
native/sev_nif/src/: lib.rs
rust_test/: Cargo.toml  docs_code.md
scripts/: dynamic-router.lua  fix-markdown-headers.sh  hyper-token-p4-client.lua  hyper-token-p4.lua  hyper-token.lua  hyper-token.md  meta-test.lua  p4-payment-client.lua  p4-payment-ledger.lua  p4-payment-process.lua  p4-payment-proxy.lua  payment-proxy.lua  payment-subledger.lua  schema.gql
src/: ao.app.src  ao.erl  ao_app.erl  ao_beamr.erl  ao_beamr_io.erl  ao_cache.erl  ao_client.erl  ao_device.erl  ao_device_loader.erl  ao_fs_store.erl  ao_http.erl  ao_http_router.erl  ao_keyval.erl  ao_logger.erl  ao_message.erl  ao_process.erl  ao_process_monitor.erl  ao_remote_node_store.erl  ao_remote_store.erl  ao_router.erl  ao_store.erl  ao_store_common.erl  ao_sup.erl  (+223 more)
(+404 files in other folders)
