[package]
name = "dev_snp_nif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dev_snp_nif"
path = "src/lib.rs"
crate-type = ["dylib"]

[target.'cfg(target_os = "macos")']
rustflags = [
    "-C", "link-arg=-undefined",
    "-C", "link-arg=dynamic_lookup",
]

[dependencies]
rustler = "0.36.0"
sev = { path = "./sev" }
x509-parser = "0.8.1"
asn1-rs = "0.7.0"
tiny_http = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version="0.12.12", features = ["blocking","json"] }
ring = "0.17.8"
hex = "0.4.3"
clap = { version = "4.5.3", features = ["derive"] }
snafu = "0.8.2"
base64 = "0.22.1"
bincode = "1.3.3"
openssl = "0.10.66"
toml = "0.8.12"
hex-buffer-serde = "0.4.0"
indicatif = "0.17.8"