[package]
name = "dev_snp_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "dev_snp_nif"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.36.0"
sev = { git = "https://github.com/PeterFarber/sev.git", features = ["openssl"] }
openssl = "0.10.66"
bincode = "1.3"
snafu = "0.8.2"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version="0.11.10", features = ["blocking"]}
tokio = {version = "1.29.1", features =["rt-multi-thread"] }