[package]
name = "digest_calc"
version = "0.1.0"
edition = "2021"

[dependencies]
sev = { git = "https://github.com/PeterFarber/sev.git", features = ["openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
openssl = "0.10.66"
bincode = "1.3"
clap = "3.0"