[package]
name = "sev_nif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sev_nif"
path = "src/lib.rs"
crate-type = ["dylib"]

[target.'cfg(target_os = "macos")']
rustflags = [
    "-C", "link-arg=-undefined",
    "-C", "link-arg=dynamic_lookup",
]

[dependencies]
rustler = "0.36.0"
sev = { version = "5.0.0", features = ["openssl"] }
openssl = "0.10"
x509-parser = "0.16.0"
asn1-rs = "0.7.0"
bincode = "1.3"